--- a/source/css/_schemes/Gemini/index.styl
+++ b/source/css/_schemes/Gemini/index.styl
@@ -90,7 +90,7 @@ $use-seo = hexo-config('seo');
 
 // Footer alignment.
 .main {
-  padding-bottom: initial;
+  padding-bottom: unset;
 }
 
 .footer {
