--- a/source/css/_common/components/post/post.styl
+++ b/source/css/_common/components/post/post.styl
@@ -56,7 +56,17 @@
     }
   }
 }
-
+// 文章内链接文本样式
+.post-body p a{
+  color: #0593d3; //原始链接颜色
+  border-bottom: none;
+  border-bottom: 1px solid #0593d3; //底部分割线颜色
+  &:hover {
+    color: #fc6423; //鼠标经过颜色
+    border-bottom: none;
+    border-bottom: 1px solid #fc6423; //底部分割线颜色
+  }
+}
 @import 'post-collapse';
 @import 'post-eof';
 @import 'post-expand';
@@ -69,3 +79,4 @@
 @import 'post-reward';
 
 @import 'post-copyright' if (hexo-config('creative_commons.post'));
+@import "my-post-copyright"
