--- a/source/css/_common/outline/sidebar/sidebar-author.styl
+++ b/source/css/_common/outline/sidebar/sidebar-author.styl
@@ -5,7 +5,13 @@
   margin: 0 auto;
   max-width: $site-author-image-width;
   padding: $site-author-image-padding;
-
+  
+  /* 头像圆形 */
+  border-radius: 80px;
+  -webkit-border-radius: 80px;
+  -moz-border-radius: 80px;
+  box-shadow: inset 0 -1px 0 #333sf;
+  
   if (hexo-config('avatar.rounded')) {
     border-radius: 50%;
   }
